--- a/app/src/main/res/layout/fragment_instruction.xml
+++ b/app/src/main/res/layout/fragment_instruction.xml
@@ -9,6 +9,10 @@
         tools:context=".WelcomeFragment"
         android:fillViewport="true">
 
+        <!-- Using constraint view to arrange UI elements make sure that it looks identical
+         no matter which size of android device the app runs on. In addition, it lays UI elements with constraint referring to other UI elements
+         making sure the correct size and shape.
+        -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/instruction_layout"
             android:layout_width="match_parent"
@@ -19,9 +23,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/common_extra_padding"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/common_padding"
                 android:layout_marginEnd="@dimen/common_extra_padding"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="@dimen/common_padding"
                 android:fontFamily="@font/allerta"
                 android:text="@string/instruction_line1"
                 android:textSize="16sp"
@@ -48,7 +52,7 @@
                 android:id="@+id/instruction_next_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/special_top_padding"
                 android:fontFamily="@font/allerta"
                 android:text="@string/instruction_next_btn_text"
                 app:layout_constraintEnd_toEndOf="parent"
