--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -4,193 +4,193 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="shoe"
             type="com.udacity.shoestore.models.Shoe" />
+
         <variable
             name="shoeInfoFragment"
             type="com.udacity.shoestore.ShoeDetailFragment" />
-        <import type="com.udacity.shoestore.utility.Converter"/>
+
+        <import type="com.udacity.shoestore.utility.Converter" />
     </data>
-    
-    <androidx.core.widget.NestedScrollView
+
+    <!-- Using constraint view to arrange UI elements make sure that it looks identical
+         no matter which size of android device the app runs on. In addition, it lays UI elements with constraint referring to other UI elements
+         making sure the correct size and shape.
+     -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/shoe_detail_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="wrap_content"
+        tools:context=".ShoeDetailFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/shoe_detail_layout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/new_shoe_title_text"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:context=".ShoeDetailFragment">
+            android:layout_marginStart="@dimen/common_padding"
+            android:layout_marginTop="@dimen/common_extra_padding"
+            android:layout_marginEnd="@dimen/common_padding"
+            android:fontFamily="@font/allerta"
+            android:text="@string/add_new_shoe_heading"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Add new shoe" />
 
-            <TextView
-                android:id="@+id/new_shoe_title_text"
-                android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/shoe_name_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/common_extra_padding"
+            android:layout_marginTop="@dimen/common_distance_padding"
+            android:layout_marginEnd="@dimen/common_extra_padding"
+            android:hint="@string/enter_shoe_name_hint_text"
+            app:endIconMode="clear_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/new_shoe_title_text"
+            app:startIconDrawable="@drawable/ic_shoe_name">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/shoe_name_edit"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="@dimen/common_extra_padding"
-                android:layout_marginEnd="8dp"
+                android:ems="10"
                 android:fontFamily="@font/allerta"
-                android:text="@string/add_new_shoe_heading"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Add new shoe" />
+                android:inputType="textPersonName"
+                android:text="@={shoe.name}" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/shoe_name_layout"
-                android:layout_width="0dp"
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/shoe_company_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/common_extra_padding"
+            android:layout_marginTop="@dimen/common_distance_padding"
+            android:layout_marginEnd="@dimen/common_extra_padding"
+            android:hint="@string/enter_shoe_company_hint_text"
+            app:endIconMode="clear_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/shoe_name_layout"
+            app:startIconDrawable="@drawable/ic_shoe_company">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/shoe_company_edit"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/common_extra_padding"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="@dimen/common_extra_padding"
-                android:hint="@string/enter_shoe_name_hint_text"
-                app:endIconMode="clear_text"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/new_shoe_title_text"
-                app:startIconDrawable="@drawable/ic_shoe_name">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/shoe_name_edit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:fontFamily="@font/allerta"
-                    android:inputType="textPersonName"
-                    android:text="@={shoe.name}"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/shoe_company_layout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/common_extra_padding"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="@dimen/common_extra_padding"
-                android:hint="@string/enter_shoe_company_hint_text"
-                app:endIconMode="clear_text"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/shoe_name_layout"
-                app:startIconDrawable="@drawable/ic_shoe_company">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/shoe_company_edit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:fontFamily="@font/allerta"
-                    android:inputType="textPersonName"
-                    android:text="@={shoe.company}"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/shoe_size_layout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/common_extra_padding"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="@dimen/common_extra_padding"
-                android:hint="@string/enter_shoe_size_hint_text"
-                app:endIconMode="clear_text"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/shoe_company_layout"
-                app:startIconDrawable="@drawable/ic_shoe_size">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/shoe_size_edit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:fontFamily="@font/allerta"
-                    android:inputType="numberDecimal"
-                    android:text="@={Converter.decimalToText(shoeSizeEdit, shoe.size, shoe.size)}" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/shoe_info_layout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/common_extra_padding"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="@dimen/common_extra_padding"
-                android:hint="@string/enter_shoe_note_hint_text"
-                app:endIconMode="clear_text"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/shoe_size_layout"
-                app:startIconDrawable="@drawable/ic_shoe_detail">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/shoe_detail_edit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:fontFamily="@font/allerta"
-                    android:inputType="textMultiLine"
-                    android:lines="3"
-                    android:text="@={shoe.description}" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-         <TextView
-                android:id="@+id/error_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="12dp"
+                android:ems="10"
                 android:fontFamily="@font/allerta"
-                android:textColor="@color/design_default_color_error"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/shoe_info_layout"
-                tools:text="Error Text" />
+                android:inputType="textPersonName"
+                android:text="@={shoe.company}" />
 
-            <Button
-                android:id="@+id/save_btn"
-                android:layout_width="wrap_content"
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/shoe_size_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/common_extra_padding"
+            android:layout_marginTop="@dimen/common_distance_padding"
+            android:layout_marginEnd="@dimen/common_extra_padding"
+            android:hint="@string/enter_shoe_size_hint_text"
+            app:endIconMode="clear_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/shoe_company_layout"
+            app:startIconDrawable="@drawable/ic_shoe_size">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/shoe_size_edit"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="@dimen/common_extra_padding"
+                android:ems="10"
                 android:fontFamily="@font/allerta"
-                android:onClick="@{() -> shoeInfoFragment.saveShoeItem()}"
-                android:text="@string/save_btn_text"
-                app:layout_constraintBaseline_toBaselineOf="@+id/cancel_btn"
-                app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/error_text" />
+                android:inputType="numberDecimal"
+                android:text="@={Converter.decimalToText(shoeSizeEdit, shoe.size, shoe.size)}" />
 
-            <Button
-                android:id="@+id/cancel_btn"
-                android:layout_width="wrap_content"
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/shoe_info_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/common_extra_padding"
+            android:layout_marginTop="@dimen/common_distance_padding"
+            android:layout_marginEnd="@dimen/common_extra_padding"
+            android:hint="@string/enter_shoe_note_hint_text"
+            app:endIconMode="clear_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/shoe_size_layout"
+            app:startIconDrawable="@drawable/ic_shoe_detail">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/shoe_detail_edit"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="@dimen/common_extra_padding"
-                android:layout_marginEnd="12dp"
-                android:backgroundTint="?attr/colorSecondaryVariant"
+                android:ems="10"
                 android:fontFamily="@font/allerta"
-                android:onClick="@{() -> shoeInfoFragment.goToShoeListFragment()}"
-                android:text="@string/cancel_btn_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/save_btn"
-                app:layout_constraintTop_toBottomOf="@+id/error_text" />
+                android:inputType="textMultiLine"
+                android:lines="3"
+                android:text="@={shoe.description}" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    </androidx.core.widget.NestedScrollView>
+        <TextView
+            android:id="@+id/error_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/common_distance_padding"
+            android:layout_marginTop="@dimen/common_distance_padding"
+            android:layout_marginEnd="@dimen/common_distance_padding"
+            android:fontFamily="@font/allerta"
+            android:textColor="@color/design_default_color_error"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/shoe_info_layout"
+            tools:text="Error Text" />
+
+        <Button
+            android:id="@+id/save_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/common_distance_padding"
+            android:layout_marginTop="@dimen/common_extra_padding"
+            android:fontFamily="@font/allerta"
+            android:onClick="@{() -> shoeInfoFragment.saveShoeItem()}"
+            android:text="@string/save_btn_text"
+            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_btn"
+            app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/error_text" />
+
+        <Button
+            android:id="@+id/cancel_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/common_padding"
+            android:layout_marginTop="@dimen/common_extra_padding"
+            android:layout_marginEnd="@dimen/common_distance_padding"
+            android:backgroundTint="?attr/colorSecondaryVariant"
+            android:fontFamily="@font/allerta"
+            android:onClick="@{() -> shoeInfoFragment.goToShoeListFragment()}"
+            android:text="@string/cancel_btn_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/save_btn"
+            app:layout_constraintTop_toBottomOf="@+id/error_text" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
