--- a/app/src/main/res/layout/shoe_item.xml
+++ b/app/src/main/res/layout/shoe_item.xml
@@ -2,6 +2,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Here intentionally Linear Layout has been used as this represents
+         a single shoe item container on Shoe List Screen.
+    -->
     <LinearLayout
         android:id="@+id/shoe_item_layout"
         android:layout_width="match_parent"
@@ -19,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="@dimen/card_padding">
+                android:padding="@dimen/common_padding">
 
                 <TextView
                     android:id="@+id/shoe_name_card_text"
