--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="common_padding">8dp</dimen>
+    <dimen name="common_padding">8dp</dimen>.
+    <dimen name="special_top_padding">10dp</dimen>
+    <dimen name="common_distance_padding">12dp</dimen>
     <dimen name="common_extra_padding">16dp</dimen>
     <dimen name="card_elevation">4dp</dimen>
-    <dimen name="common_layout_margin">4dp</dimen>
-    <dimen name="cardtext_left_margin">8dp</dimen>
-    <dimen name="card_padding">8dp</dimen>
 </resources>
