--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,15 +23,15 @@
     </style>
 
     <style name="card_secondary_text">
-        <item name="android:layout_marginStart">@dimen/cardtext_left_margin</item>
-        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginStart">@dimen/common_padding</item>
+        <item name="android:layout_marginTop">@dimen/common_padding</item>
         <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Body2</item>
         <item name="android:textColor">?android:attr/textColorSecondary</item>
         <item name="android:fontFamily">@font/allerta</item>
     </style>
 
     <style name="card_heading_text">
-        <item name="android:layout_marginStart">@dimen/cardtext_left_margin</item>
+        <item name="android:layout_marginStart">@dimen/common_padding</item>
         <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Headline4
         </item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
@@ -41,9 +41,9 @@
     <style name="Widget.App.CardView" parent="Widget.MaterialComponents.CardView">
         <item name="materialThemeOverlay">@style/ThemeOverlay.App.Card</item>
         <item name="shapeAppearance">@style/ShapeAppearance.App.MediumComponent</item>
-        <item name="android:layout_margin">@dimen/common_layout_margin</item>
+        <item name="android:layout_margin">@dimen/card_elevation</item>
         <item name="android:elevation">@dimen/card_elevation</item>
-        <item name="android:padding">@dimen/card_padding</item>
+        <item name="android:padding">@dimen/common_padding</item>
     </style>
     <style name="ThemeOverlay.App.Card" parent="">
         <item name="colorPrimary">@color/blue</item>
@@ -53,7 +53,7 @@
 
     <style name="ShapeAppearance.App.MediumComponent" parent="ShapeAppearance.MaterialComponents.MediumComponent">
         <item name="cornerFamily">cut</item>
-        <item name="cornerSize">8dp</item>
+        <item name="cornerSize">@dimen/common_padding</item>
     </style>
 
 </resources>
